# urban-water-forecast-hackathon

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
demo/: Dockerfile  README.md  package.json
demo/app/: globals.css  layout.tsx  page.tsx
demo/public/: data.json
demo/scripts/: build_data.py  validate_data.py
docs/: 01_challenge.md  02_dataset.md  03_model.md
outputs/metrics/: ensemble_3m_v1_v9o_nested_fold_metrics.csv  model_v3d_tuned_fold_metrics.csv  model_v8_tuned_fold_metrics.csv  model_v9_optuna_fold_metrics.csv  seasonal_naive_fold_metrics.csv
outputs/predictions/: ensemble_3m_v1_v9o_nested_predictions.csv  ensemble_v3_enhanced_nested_predictions.csv  model_v1_tuned_predictions.csv  model_v9_optuna_predictions.csv  seasonal_naive_predictions.csv
scripts/: README.md  generate_synthetic_data.py  run_audit.py  run_baseline.py  run_ensemble_ablation.py  run_ensemble_compact5.py  run_ensemble_tuned.py  run_ensemble_v2.py  run_model_v1.py  run_model_v1_tuned.py  run_model_v3_tuned.py  run_model_v3d_tuned.py  run_model_v8_tuned.py  run_model_v9.py  run_model_v9_by_resolution.py  run_model_v9_tuned.py  run_model_v9_weighted.py  run_optuna_residual_correction.py  run_optuna_residual_correction_nested.py  run_optuna_v1.py  run_optuna_v3.py  run_optuna_v3d.py  run_optuna_v8.py  run_optuna_v9.py  run_reproduction_pipeline.py
src/hackathon_opti/: __init__.py  baselines.py  config.py  data.py  ensemble_stacking.py  features.py  model_registry.py  model_v1.py  model_v3_direct.py  (+3 more)
(+6 files in other folders)
